--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,29 @@
 <!--			<artifactId>javax.annotation-api</artifactId>-->
 <!--			<version>1.2</version>-->
 <!--		</dependency>-->
+
+		<dependency>
+			<groupId>org.apache.maven.indexer</groupId>
+			<artifactId>indexer-core</artifactId>
+			<version>6.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.indexer</groupId>
+			<artifactId>indexer-reader</artifactId>
+			<version>6.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>8.11.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-analyzers-common</artifactId>
+			<version>8.11.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -110,6 +133,14 @@
 				<configuration>
 					<finalName>demo-swagger-app</finalName>
 					<excludeDevtools>true</excludeDevtools>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>7</source>
+					<target>7</target>
 				</configuration>
 			</plugin>
 		</plugins>
