--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,29 @@
-name: CI
-
-on:
-  push:
-    branches:
-      - $CI_COMMIT_BRANCH
-
-jobs:
-  build-licensight:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install licensight-file
-        run: |
-          echo "install licensight-file"
-          Invoke-WebRequest https://licensight.s3.eu-central-1.amazonaws.com/latest/windows/licensight-scan.exe -OutFile licensight-scan.exe
-          chmod +x ./licensight-file
-
-      - name: Push SBOM to licensight
-        env:
-          PROJECT_NAME: ${{ secrets.PROJECT_NAME }}
-          ENV: ${{ secrets.ENV }}
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        run: |
-          echo "repository name is $PROJECT_NAME ${{ secrets.ENV }}"
-          echo "push SBOM to licensight"
-          ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY
+#name: CI
+#
+#on:
+#  push:
+#    branches:
+#      - $CI_COMMIT_BRANCH
+#
+#jobs:
+#  build-licensight:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Install licensight-file
+#        run: |
+#          echo "install licensight-file"
+#          Invoke-WebRequest https://licensight.s3.eu-central-1.amazonaws.com/latest/windows/licensight-scan.exe -OutFile licensight-scan.exe
+#          chmod +x ./licensight-file
+#
+#      - name: Push SBOM to licensight
+#        env:
+#          PROJECT_NAME: ${{ secrets.PROJECT_NAME }}
+#          ENV: ${{ secrets.ENV }}
+#          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+#        run: |
+#          echo "repository name is $PROJECT_NAME ${{ secrets.ENV }}"
+#          echo "push SBOM to licensight"
+#          ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY
