--- a/.github/workflows/dependabot-cli.yml
+++ b/.github/workflows/dependabot-cli.yml
@@ -1,26 +1,27 @@
 name: Dependabot CLI
 
 on:
-  pull_request:
+  push:
     branches:
-      - '*'
+      - 'dependabot-cli'
 
-jobs:
-  dependabot:
-    runs-on: ubuntu-latest
+steps:
+  - name: Checkout repository
+    uses: actions/checkout@v4
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  - name: Set up Go
+    uses: actions/setup-go@v5
+    with:
+      go-version: '1.21'
 
-      - name: Login to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+  - name: Install Dependabot CLI
+    run: |
+      go install github.com/dependabot/cli/cmd/dependabot@latest
+      echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
-      - name: Run Dependabot CLI
-        run: |
-          docker run --rm \
-            -e GITHUB_ACCESS_TOKEN=${{ secrets.GITHUB_TOKEN }} \
-            -v ${{ github.workspace }}:/home/dependabot/app \
-            ghcr.io/dependabot/cli:latest update \
-            --provider=github \
-            --repo=${{ github.repository }}
+  - name: Run Dependabot update (Maven)
+    env:
+      LOCAL_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    run: |
+      # Repo hiện tại (GITHUB_REPOSITORY), dùng package manager maven
+      dependabot update maven $GITHUB_REPOSITORY --directory=/
