--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,30 +16,33 @@
 #          ls -la "$JDK_PATH"
 
 
-#name: scan
-#on:
+name: scan
+on:
+  push:
+    tags:
+      - "*"
 #  pull_request:
 #    branches:
 #      - '*'
-#jobs:
-#  licensight:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#      - name: Licensight scan for the Pull Request
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        run: |
-#          curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan
-#          chmod +x ./licensight-scan
-#          ./licensight-scan generate \
-#            -d . \
-#            -a "${{ vars.LICENSIGHT_APPLICATION_NAME }}" \
-#            -e ${{ vars.LICENSIGHT_URL }} \
-#            -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} \
-#            -b ${{ github.head_ref }} \
-#            -dpr true
+jobs:
+  licensight:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Licensight scan for the Pull Request
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan
+          chmod +x ./licensight-scan
+          ./licensight-scan generate \
+            -d . \
+            -a "${{ vars.LICENSIGHT_APPLICATION_NAME }}" \
+            -e ${{ vars.LICENSIGHT_URL }} \
+            -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} \
+            -b ${{ github.head_ref }} \
+            -dpr true
 
 
 #name: scan
