--- a/.github/workflows/dependabot-cli.yml
+++ b/.github/workflows/dependabot-cli.yml
@@ -5,23 +5,26 @@ on:
     branches:
       - 'dependabot-cli'
 
-steps:
-  - name: Checkout repository
-    uses: actions/checkout@v4
+jobs:
+  dependabot-cli:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-  - name: Set up Go
-    uses: actions/setup-go@v5
-    with:
-      go-version: '1.21'
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
 
-  - name: Install Dependabot CLI
-    run: |
-      go install github.com/dependabot/cli/cmd/dependabot@latest
-      echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+      - name: Install Dependabot CLI
+        run: |
+          go install github.com/dependabot/cli/cmd/dependabot@latest
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
-  - name: Run Dependabot update (Maven)
-    env:
-      LOCAL_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    run: |
-      # Repo hiện tại (GITHUB_REPOSITORY), dùng package manager maven
-      dependabot update maven $GITHUB_REPOSITORY --directory=/
+      - name: Run Dependabot update (Maven)
+        env:
+          LOCAL_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Repo hiện tại (GITHUB_REPOSITORY), dùng package manager maven
+          dependabot update maven $GITHUB_REPOSITORY --directory=/
