--- a/.github/workflows/dependabot-cli.yml
+++ b/.github/workflows/dependabot-cli.yml
@@ -44,7 +44,7 @@ jobs:
           git config user.name "HUNGPNdev"
           git config user.email "hung929912a@gmail.com"
           DEFAULT_BRANCH=${{ github.event.repository.default_branch }}
-          git checkout origin/$DEFAULT_BRANCH
+          git checkout $DEFAULT_BRANCH
           git checkout -b branch
           git add .
           git commit -m "chore: update Maven dependencies via Dependabot CLI"
