--- a/.github/workflows/dependabot-cli.yml
+++ b/.github/workflows/dependabot-cli.yml
@@ -43,8 +43,6 @@ jobs:
           branch="dependabot/maven-updates"
           git config user.name "HUNGPNdev"
           git config user.email "hung929912a@gmail.com"
-          DEFAULT_BRANCH=${{ github.event.repository.default_branch }}
-          git checkout $DEFAULT_BRANCH
           git checkout -b branch
           git add .
           git commit -m "chore: update Maven dependencies via Dependabot CLI"
@@ -56,7 +54,7 @@ jobs:
           branch="dependabot/maven-updates"
           gh pr create \
             --title "chore: Bump Maven dependencies" \
-            --body "$(cat updates.yml)" \
+            --body "$(updates.yml)" \
             --base LIC-1241 \
             --head $branch
         env:
