--- a/.github/dependabot/maven.yml
+++ b/.github/dependabot/maven.yml
@@ -8,9 +8,11 @@ job:
     - "org.springdoc:springdoc-openapi-starter-webmvc-ui"
   security-advisories:
     - dependency-name: "org.apache.kafka:kafka-clients"
-      affected-versions: ">3.9.0"
+      affected-versions:
+        - <3.9.0
     - dependency-name: "org.springdoc:springdoc-openapi-starter-webmvc-ui"
-      affected-versions: ">2.8.0"
+      affected-versions:
+        - <2.8.0
   security-updates-only: true
   source:
     provider: github
