--- a/.github/workflows/dependabot-example-cli.yml
+++ b/.github/workflows/dependabot-example-cli.yml
@@ -39,7 +39,7 @@ jobs:
           # -f: the path to the job input
           # --local: use the locally checked out code instead of cloning each time
           # --timeout: the maximum time to wait for a job to finish
-          ./dependabot update \
+          dependabot update \
             -f repo/.github/dependabot/maven.yml \
             --local repo \
             --timeout 20m >> result.jsonl || true
@@ -50,13 +50,23 @@ jobs:
           name: dependabot-result
           path: result.jsonl
 
-  create-prs:
+      - name: Check if updates.yml has changes
+        id: check_changes
+        run: |
+          if [ -s updates.yml ]; then
+            echo "changes=true" >> $GITHUB_OUTPUT
+          else
+            echo "changes=false" >> $GITHUB_OUTPUT
+          fi
+
+  create-branches:
     permissions:
       # This job creates PRs, so it needs write access.
       contents: write
       pull-requests: write
     runs-on: ubuntu-latest
     needs: run-dependabot
+    if: steps.check_changes.outputs.changes == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
