--- a/.github/workflows/dependabot-example-cli.yml
+++ b/.github/workflows/dependabot-example-cli.yml
@@ -66,7 +66,7 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     needs: run-dependabot
-    if: steps.check_changes.outputs.changes == 'true'
+    if: needs.run-dependabot.outputs.changes == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
